<resources>
    <string name="app_name">pet-care-app</string>
    <string name="home_nav">Home</string>
    <string name="library_nav">Library</string>
    <string name="profile_nav">Profile</string>
    <string name="diary_nav">Diary</string>
    <string name="logout_nav">Log out</string>
    <string name="meeting_nav">Hi, </string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="meeting_questionnaire">Lets get to know! </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_recycler_heading">Food</string>
    <string name="healthcare_recycler_heading">Healthcare</string>
    <string name="reset">RESET</string>
    <string name="start">START</string>
    <string name="add_to_list">Add to list</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="name_hint">Name</string>
    <string name="age_hint">Age</string>
    <string name="delete_account">Delete account</string>
    <string name="edit">Edit</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="next"><![CDATA[->]]></string>
    <string name="add_new_note">Add new note!</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="save_note">Save note</string>
    <string name="new_event">New event</string>
    <string name="name_event">Name</string>
    <string name="choose_date_event">Choose date:</string>
    <string name="choose_time_event">Choose time:</string>
    <string name="save">Save</string>
    <string name="write_here">Write here</string>
    <string name="time">Time</string>
    <string name="what_did_you_eat">What did you eat?</string>
    <string name="make_notes_about_healthcare">Make notes about healthcare!</string>
    <string name="delete">Delete</string>
    <string name="tell_us_about_your_pet">Tell us about your pet!</string>
    <string name="let_s_start">Let\'s start!</string>
    <string name="weight_hint">Weight</string>
    <string name="email">Email</string>
    <string name="create_account_button">Create account</string>
    <string name="breed_hint">Breed</string>
</resources>