<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AddNoteFragment">

    <TextView
        android:id="@+id/titletextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/add_new_note"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner_2"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/titleNoteInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/title"
            android:padding="10dp" />

        <EditText
            android:id="@+id/dateNoteinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/date"
            android:inputType="none"
            android:padding="10dp" />

        <EditText
            android:id="@+id/descriptionNoteInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:gravity="top"
            android:hint="@string/description"
            android:lines="8"
            android:padding="10dp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selectDateNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:text="@string/select_date"
        android:textColor="@color/dark_pink_color" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selectTimeNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:text="@string/select_time"
        android:textColor="@color/dark_pink_color" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/dark_blue_color"
        android:text="@string/save_note"
        android:textColor="@color/white" />
</LinearLayout>
