<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_side_navbar_background"
    android:paddingHorizontal="20dp"
    android:paddingVertical="80dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/tell_us_about_your_pet"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/petNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:padding="15dp" />

            <EditText
                android:id="@+id/petAgeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/age_hint"
                android:inputType="number"
                android:padding="15dp" />

            <EditText
                android:id="@+id/petWeightInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/weight_hint"
                android:inputType="number"
                android:padding="15dp" />

            <EditText
                android:id="@+id/breedInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/breed_hint"
                android:inputType="text"
                android:padding="15dp" />


            <RadioGroup
                android:id="@+id/petGenderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <RadioButton
                    android:id="@+id/genderMaleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/genderFemaleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female" />
            </RadioGroup>

            <Button
                android:id="@+id/register_dog_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:padding="15dp"
                android:text="@string/let_s_start"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>