<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/foodCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="100dp"
        app:cardCornerRadius="20dp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextFood"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/write_here" />

                <Button
                    android:id="@+id/timePickerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/time"
                    android:textColor="@color/dark_pink_color" />

                <Button
                    android:id="@+id/datePickerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/date"
                    android:textColor="@color/dark_blue_color" />
            </LinearLayout>

            <Button
                android:id="@+id/addFoodToListButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/black"
                android:text="@string/add_to_list" />

            <ListView
                android:id="@+id/listViewFood"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/foodFragmentImage"
        android:layout_width="198dp"
        android:layout_height="223dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="-40dp"
        android:contentDescription="img_food_fragment"
        android:src="@drawable/food_page_img"
        app:layout_constraintBottom_toTopOf="@+id/foodCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/foodFragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="54dp"
        android:text="@string/what_did_you_eat"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/foodFragmentImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>