<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_side_navbar_background"
    android:padding="80dp"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="logo"
            android:src="@drawable/logo"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="15sp" />

        <Button
            android:id="@+id/sendEmailButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="15dp"
            android:textColor="@color/black"
            android:text="Send Verification Email"
            android:layout_below="@id/passwordInput"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="15dp"
            android:textColor="@color/black"
            android:text="Next"
            android:layout_below="@id/sendEmailButton"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>